--- a/app/src/main/res/layout/solution.xml
+++ b/app/src/main/res/layout/solution.xml
@@ -15,8 +15,6 @@
   limitations under the License.
   -->
 
-<!-- This layout contains some patterns that should be avoided and are fixed in
- the viewmodel layout. -->
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -24,19 +22,16 @@
 
     <data>
 
-        <import type="com.example.android.databinding.basicsample.R" />
-
-        <import type="com.example.android.databinding.basicsample.util.ConverterUtil" />
-
         <variable
-            name="user"
-            type="com.example.android.databinding.basicsample.data.ObservableFieldProfile" />
+            name="viewmodel"
+            type="com.example.android.databinding.basicsample.data.SimpleViewModelSolution" />
     </data>
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <!-- A simple binding between a TextView and a string observable in the ViewModel -->
         <TextView
             android:id="@+id/name"
             android:layout_width="0dp"
@@ -44,12 +39,13 @@
             android:layout_marginEnd="128dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            android:text="@{user.name}"
+            android:text="@{viewmodel.name}"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/name_label" />
 
+        <!-- A simple binding between a TextView and a string observable in the ViewModel -->
         <TextView
             android:id="@+id/lastname"
             android:layout_width="0dp"
@@ -57,16 +53,14 @@
             android:layout_marginEnd="128dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            android:text="@{user.lastName}"
+            android:text="@{viewmodel.lastName}"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/lastname_label" />
 
-        <!-- Layout expressions can be *too* powerful. It's preferred to avoid this type of
-        view logic in the layout. Instead, use Binding Adapters (see ViewModelActivity).
-
-        Also, `app:srcCompat` is bound to setImageResource.
+        <!-- A custom Binding Adapter (`app:popularityIcon`) is used passing `viewmodel.popularity`
+        as a parameter. Because it's a @Bindable property, the ImageView is automatically updated.
         -->
         <ImageView
             android:id="@+id/imageView"
@@ -82,16 +76,15 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
             app:layout_constraintVertical_chainStyle="packed"
-            android:tint="@{user.likes &gt; 9 ? @color/star : @android:color/black}"
-            app:srcCompat="@{user.likes &lt; 4 ? R.drawable.ic_person_black_96dp : R.drawable.ic_whatshot_black_96dp }" />
+            app:popularityIcon="@{viewmodel.popularity}" />
 
         <!-- Conversions like Integer to String are expressions simple enough for the layout. An
-        alternative would be to create a getter in the ViewModel for likes as a String. -->
+        alternative would be to create a getter in the ViewModel to expose likes as Strings. -->
         <TextView
             android:id="@+id/likes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{Integer.toString(user.likes)}"
+            android:text="@{Integer.toString(viewmodel.likes)}"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             app:layout_constraintBottom_toTopOf="@+id/like_button"
             app:layout_constraintEnd_toEndOf="@+id/likes_label"
@@ -99,21 +92,19 @@
             app:layout_constraintStart_toStartOf="@+id/likes_label"
             app:layout_constraintTop_toBottomOf="@+id/likes_label" />
 
-        <!-- Note that the `android:onClick` attribute is going to call the onLike() method in the
-         activity, polluting it with logic. See the `ViewModelActivity` for a better alternative.
-         -->
+        <!-- Listeners can accept lambdas so in this case the ViewModel deals with the event,
+        bypassing the activity. -->
         <Button
             android:id="@+id/like_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginTop="16dp"
-            android:onClick="onLike"
+            android:onClick="@{() -> viewmodel.onLike()}"
             android:text="@string/like"
             app:layout_constraintBottom_toTopOf="@+id/progressBar"
-            app:layout_constraintStart_toStartOf="@+id/imageView"
             app:layout_constraintEnd_toEndOf="@+id/imageView"
+            app:layout_constraintStart_toStartOf="@+id/imageView"
             app:layout_constraintTop_toBottomOf="@+id/likes" />
 
         <TextView
@@ -151,10 +142,7 @@
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
         <!-- android:progressTint is only available in API 21+ so we deal with that in the
-        Binding Adapter.
-
-        The android:visibility attribute is used to showcase BindingConversions,
-        see the README for a better alternative with a BindingAdapter.-->
+         Binding Adapter. -->
         <ProgressBar
             android:id="@+id/progressBar"
             style="?android:attr/progressBarStyleHorizontal"
@@ -164,8 +152,9 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:max="@{100}"
-            android:visibility="@{ConverterUtil.isZero(user.likes)}"
-            app:progressScaled="@{user.likes}"
+            app:hideIfZero="@{viewmodel.likes}"
+            app:progressTint="@{viewmodel.popularity}"
+            app:progressScaled="@{viewmodel.likes}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/like_button"
             app:layout_constraintHorizontal_bias="0.5"
