--- a/app/src/main/res/layout/plain_activity_solution_5.xml
+++ b/app/src/main/res/layout/plain_activity_solution_5.xml
@@ -16,86 +16,86 @@
   -->
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
             name="viewmodel"
-            type="com.example.android.databinding.basicsample.data.SimpleViewModelSolution" />
+            type="com.example.android.databinding.basicsample.data.SimpleViewModelSolution"/>
     </data>
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/plain_name"
-            android:text="@{viewmodel.name}"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="128dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="128dp"
+            android:text="@{viewmodel.name}"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/name_label" />
+            app:layout_constraintTop_toBottomOf="@+id/name_label"/>
 
         <TextView
             android:id="@+id/plain_lastname"
-            android:text="@{viewmodel.lastName}"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="128dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="128dp"
+            android:text="@{viewmodel.lastName}"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/lastname_label" />
+            app:layout_constraintTop_toBottomOf="@+id/lastname_label"/>
 
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="24dp"
             android:layout_marginTop="24dp"
+            android:layout_marginEnd="24dp"
             android:contentDescription="@string/profile_avatar_cd"
-            android:minHeight="48dp"
             android:minWidth="48dp"
+            android:minHeight="48dp"
             app:layout_constraintBottom_toTopOf="@+id/likes_label"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
-            app:layout_constraintVertical_chainStyle="packed" />
+            app:layout_constraintVertical_chainStyle="packed"/>
 
         <TextView
             android:id="@+id/likes"
-            android:text="@{Integer.toString(viewmodel.likes)}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@{Integer.toString(viewmodel.likes)}"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             app:layout_constraintBottom_toTopOf="@+id/like_button"
             app:layout_constraintEnd_toEndOf="@+id/likes_label"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="@+id/likes_label"
-            app:layout_constraintTop_toBottomOf="@+id/likes_label" />
+            app:layout_constraintTop_toBottomOf="@+id/likes_label"/>
 
         <Button
             android:id="@+id/like_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
             android:onClick="@{() -> viewmodel.onLike()}"
             android:text="@string/like"
             app:layout_constraintBottom_toTopOf="@+id/progressBar"
-            app:layout_constraintStart_toStartOf="@+id/imageView"
             app:layout_constraintEnd_toEndOf="@+id/imageView"
-            app:layout_constraintTop_toBottomOf="@+id/likes" />
+            app:layout_constraintStart_toStartOf="@+id/imageView"
+            app:layout_constraintTop_toBottomOf="@+id/likes"/>
 
         <TextView
             android:id="@+id/name_label"
@@ -105,7 +105,7 @@
             android:layout_marginTop="8dp"
             android:text="@string/name_label"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
             android:id="@+id/lastname_label"
@@ -115,38 +115,38 @@
             android:layout_marginTop="8dp"
             android:text="@string/last_name_label"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/plain_name" />
+            app:layout_constraintTop_toBottomOf="@+id/plain_name"/>
 
         <TextView
             android:id="@+id/likes_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             android:text="@string/likes"
             android:textAlignment="center"
             app:layout_constraintBottom_toTopOf="@+id/likes"
             app:layout_constraintEnd_toEndOf="@+id/imageView"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="@+id/imageView"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            app:layout_constraintTop_toBottomOf="@+id/imageView"/>
 
         <ProgressBar
             android:id="@+id/progressBar"
-            app:hideIfZero="@{viewmodel.likes}"
-            app:progressScaled="@{viewmodel.likes}"
-            android:max="@{100}"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:max="@{100}"
+            app:hideIfZero="@{viewmodel.likes}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/like_button"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="@+id/like_button"
             app:layout_constraintTop_toBottomOf="@+id/like_button"
-            tools:progressBackgroundTint="@android:color/darker_gray" />
-    </android.support.constraint.ConstraintLayout>
+            app:progressScaled="@{viewmodel.likes}"
+            tools:progressBackgroundTint="@android:color/darker_gray"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
